update MainActivity.kt and add new activity {BatteryActivity.kt}

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,8 @@
                     android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BatteryActivity"
+            android:exported="false"/>
     </application>
 </manifest>
