--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -8,5 +8,12 @@ add_library(systemutils SHARED
     CPUInfo.cpp
 )
 
+# Find required libraries
 find_library(log-lib log)
-target_link_libraries(systemutils ${log-lib})
+find_library(GLESv2-lib GLESv2)  # Find OpenGL ES library
+
+# Link libraries to your native library
+target_link_libraries(systemutils
+    ${log-lib}
+    ${GLESv2-lib}  # Link OpenGL ES to resolve glGetString
+)
