--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
     <uses-permission android:name="android.permission.DUMP"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application 
         android:allowBackup="true" 
         android:icon="@mipmap/ic_launcher" 
@@ -21,6 +22,9 @@
                     android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".StorageActivity"
+            android:exported="false"/>
         <activity
             android:name=".BatteryActivity"
             android:exported="false"/>
