--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Ensure Gradle Wrapper Exists
+        run: |
+          if [ ! -f "gradlew" ]; then
+            echo "Gradle wrapper not found, downloading..."
+            ./gradlew wrapper
+          fi
+
+      - name: Give Execute Permission to Gradle
+        run: chmod +x gradlew
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
@@ -32,13 +42,10 @@ jobs:
 
       - name: Set up Gradle Properties
         run: |
-          echo "storeFile=$GITHUB_WORKSPACE/app/keystore.jks" >> $GITHUB_ENV
+          echo "storeFile=keystore.jks" >> $GITHUB_ENV
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
-
-      - name: Give Execute Permission to Gradle
-        run: chmod +x gradlew
 
       - name: Build Signed APK
         run: ./gradlew assembleRelease --no-daemon
