--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,110 +1,90 @@
-name: "Android Build and Release"
+name: Android Build and Release
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 permissions:
   contents: write
 
 jobs:
   build:
-    name: Build Signed APK
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Checkout Repository"
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: "Set up JDK 17"
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: "temurin"
-          java-version: "17"
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: "Set up Android SDK"
+      - name: Set up Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: "Install NDK and CMake"
+      - name: Install NDK and CMake
         run: |
           sdkmanager "ndk;26.2.11394342" "cmake;3.22.1"
 
-      - name: "Check and Fix Gradle Wrapper"
-        run: |
-          mkdir -p gradle/wrapper
-          if [ ! -f gradlew ]; then
-            echo "Gradle wrapper missing. Regenerating..."
-            gradle wrapper --gradle-version 8.10.2
-          fi
-          
-          if [ ! -f gradle/wrapper/gradle-wrapper.properties ]; then
-            echo "Creating missing gradle-wrapper.properties..."
-            echo "distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip" > gradle/wrapper/gradle-wrapper.properties
-          fi
-          
-          chmod +x gradlew
+      - name: Decode Keystore
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release-key.jks
 
-      - name: "Set up Keystore for Signing"
+      - name: Set up Gradle properties
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > keystore.jks
-          echo "KEYSTORE_PATH=$GITHUB_WORKSPACE/keystore.jks" >> $GITHUB_ENV
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
           echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
           echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
 
-      - name: "Build Unsigned APK"
-        run: ./gradlew assembleRelease --no-daemon
+      - name: Build Unsigned APKs
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleRelease --no-daemon
         env:
           ANDROID_NDK_HOME: $ANDROID_SDK_ROOT/ndk/26.2.11394342
           CMAKE_HOME: $ANDROID_SDK_ROOT/cmake/3.22.1
 
-      - name: "Sign APK"
+      - name: Sign All APKs
         run: |
-          ZIPALIGN=$ANDROID_SDK_ROOT/build-tools/$(ls $ANDROID_SDK_ROOT/build-tools | sort -V | tail -n1)/zipalign
-          APKSIGNER=$ANDROID_SDK_ROOT/build-tools/$(ls $ANDROID_SDK_ROOT/build-tools | sort -V | tail -n1)/apksigner
-          UNSIGNED_APK=app/build/outputs/apk/release/app-release-unsigned.apk
-          ALIGNED_APK=app/build/outputs/apk/release/app-release-aligned.apk
-          SIGNED_APK=app/build/outputs/apk/release/app-release.apk
+          for apk in app/build/outputs/apk/release/*.apk; do
+            apksigner sign --ks release-key.jks --ks-pass pass:${{ secrets.KEYSTORE_PASSWORD }} \
+              --key-pass pass:${{ secrets.KEY_PASSWORD }} --ks-key-alias ${{ secrets.KEY_ALIAS }} \
+              --out "${apk/.apk/-signed.apk}" "$apk"
+          done
 
-          # Zipalign APK
-          $ZIPALIGN -v -p 4 "$UNSIGNED_APK" "$ALIGNED_APK"
+      - name: Verify APK Signatures
+        run: apksigner verify -v app/build/outputs/apk/release/*-signed.apk
 
-          # Sign APK
-          $APKSIGNER sign --ks "$KEYSTORE_PATH" --ks-pass "pass:$KEYSTORE_PASSWORD" --key-pass "pass:$KEY_PASSWORD" --ks-key-alias "$KEY_ALIAS" --out "$SIGNED_APK" "$ALIGNED_APK"
-
-      - name: "Upload Signed APK as Artifact"
+      - name: Upload Signed APKs
         uses: actions/upload-artifact@v4
         with:
-          name: "Signed APK"
-          path: app/build/outputs/apk/release/app-release.apk
+          name: Signed APKs
+          path: app/build/outputs/apk/release/*-signed.apk
 
   release:
+    name: Create Release
     needs: build
     runs-on: ubuntu-latest
+
     steps:
-      - name: "Checkout Repository"
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: "Generate Release Tag"
-        run: echo "TAG_NAME=v1.0.${{ github.run_number }}" >> $GITHUB_ENV
-
-      - name: "Download Signed APK Artifact"
+      - name: Download Signed APKs
         uses: actions/download-artifact@v4
         with:
-          name: "Signed APK"
+          name: Signed APKs
           path: release-apk/
 
-      - name: "List APK Files"
-        run: ls -alh release-apk/
-
-      - name: "Create GitHub Release"
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ env.TAG_NAME }}
-          name: "Release ${{ env.TAG_NAME }}"
-          body: "This is an automated release of the signed APK."
-          files: release-apk/app-release.apk
+          tag_name: v1.0.${{ github.run_number }}
+          name: Release v1.0.${{ github.run_number }}
+          body: "This is an automated release of the signed APKs."
+          files: release-apk/*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
